organizando config properties